@@ -1,1 +1,1 @@
-11.2.0-rc2
+11.2.0
