@@ -1,123 +1,0 @@
-                                Release Summary
-
-                              asterisk-11.2.0-rc2
-
-                                Date: 2013-01-09
-
-                           <asteriskteam@digium.com>
-
-     ----------------------------------------------------------------------
-
-                               Table of Contents
-
-    1. Summary
-    2. Contributors
-    3. Other Changes
-    4. Diffstat
-
-     ----------------------------------------------------------------------
-
-                                    Summary
-
-                                 [Back to Top]
-
-   This release includes only bug fixes. The changes included were made only
-   to address problems that have been identified in this release series.
-   Users should be able to safely upgrade to this version if this release
-   series is already in use. Users considering upgrading from a previous
-   release series are strongly encouraged to review the UPGRADE.txt document
-   as well as the CHANGES document for information about upgrading to this
-   release series.
-
-   The data in this summary reflects changes that have been made since the
-   previous release, asterisk-11.2.0-rc1.
-
-     ----------------------------------------------------------------------
-
-                                  Contributors
-
-                                 [Back to Top]
-
-   This table lists the people who have submitted code, those that have
-   tested patches, as well as those that reported issues on the issue tracker
-   that were resolved in this release. For coders, the number is how many of
-   their patches (of any size) were committed into this release. For testers,
-   the number is the number of times their name was listed as assisting with
-   testing a patch. Finally, for reporters, the number is the number of
-   issues that they reported that were closed by commits that went into this
-   release.
-
-     Coders                   Testers                  Reporters              
-   3 bebuild                
-
-     ----------------------------------------------------------------------
-
-                      Commits Not Associated with an Issue
-
-                                 [Back to Top]
-
-   This is a list of all changes that went into this release that did not
-   directly close an issue from the issue tracker. The commits may have been
-   marked as being related to an issue. If that is the case, the issue
-   numbers are listed here, as well.
-
-   +------------------------------------------------------------------------+
-   | Revision | Author  | Summary                       | Issues Referenced |
-   |----------+---------+-------------------------------+-------------------|
-   | 378722   | bebuild | Create 11.2.0-rc2             |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 378785   | bebuild | Merge changes for 11.2.0-rc2  |                   |
-   |----------+---------+-------------------------------+-------------------|
-   | 378788   | bebuild | Importing release summary for |                   |
-   |          |         | 11.2.0-rc2 release.           |                   |
-   +------------------------------------------------------------------------+
-
-     ----------------------------------------------------------------------
-
-                                Diffstat Results
-
-                                 [Back to Top]
-
-   This is a summary of the changes to the source code that went into this
-   release that was generated using the diffstat utility.
-
- .version                           |    2
- CHANGES                            |    2
- ChangeLog                          |   75 +++++
- UPGRADE.txt                        |    3
- apps/app_confbridge.c              |    2
- apps/app_meetme.c                  |   16 -
- apps/app_queue.c                   |  221 +++++++++------
- apps/confbridge/conf_state_empty.c |    2
- asterisk-11.2.0-rc1-summary.html   |  403 ----------------------------
- asterisk-11.2.0-rc1-summary.txt    |  526 -------------------------------------
- asterisk-11.2.0-rc2-summary.html   |   90 ++++++
- asterisk-11.2.0-rc2-summary.txt    |  118 ++++++++
- channels/chan_agent.c              |   12
- channels/chan_dahdi.c              |    7
- channels/chan_iax2.c               |   32 +-
- channels/chan_local.c              |    3
- channels/chan_sip.c                |   76 +++--
- channels/chan_skinny.c             |   16 -
- channels/sip/include/sip.h         |    1
- configs/queues.conf.sample         |    7
- funcs/func_devstate.c              |    6
- include/asterisk/channel.h         |    6
- include/asterisk/devicestate.h     |   16 -
- include/asterisk/event_defs.h      |    8
- main/ccss.c                        |    2
- main/channel.c                     |    4
- main/channel_internal_api.c        |    1
- main/devicestate.c                 |   51 ++-
- main/event.c                       |    2
- main/features.c                    |    2
- main/http.c                        |   20 +
- res/pjproject/aconfigure           |    3
- res/pjproject/aconfigure.ac        |    1
- res/pjproject/build/common.mak     |    9
- res/res_calendar.c                 |    8
- res/res_jabber.c                   |   66 +++-
- res/res_xmpp.c                     |   51 ++-
- 37 files changed, 702 insertions(+), 1168 deletions(-)
-
-     ----------------------------------------------------------------------
